corrected background color, fixed some spacing, and added login imgs

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,9 +1,13 @@
 div#container {
-    border: 1px solid black;
+    border: 1px solid red;
     min-height: 500px;
-    /*width: 700px;*/
-    font-family: Arial, Helvetica, sans-serif;
+    /*width: 500px;*/
+    min-width: 900px;
     margin: 0 auto 0 auto;
+    font-family: Arial, Helvetica, sans-serif;
+
+    /* > direct descendent */
+    /* * every item */
 
     > * {
         border: 1px dotted blue;
@@ -19,6 +23,8 @@ div#container {
 
         div.nav {
             text-align: right;
+            padding-right: 15px;
+            font-size: 12px;
 
             a {
                 color: black;
@@ -30,7 +36,6 @@ div#container {
                 }
 
                 img {
-
                     vertical-align: auto;
                 }
             }
@@ -40,52 +45,60 @@ div#container {
                 margin: 0 5px;
             }
 
+            /*
+                targets a nav element whose class is nav
+               and whose class is bottom nav
+            */
             &.bottom-nav {
                 a {
                     text-transform: lowercase;
                 }
+                font-size: 10px;
             }
         }
 
         div.brown-box {
-            background-color: rosybrown;
+            background-color: #bec4a1;
             border-radius: 15px;
-            padding: 50px;
+            margin: 15px 10px 70px;
+            padding: 20px;
             min-height: 500px;
+            position: relative;
+
 
             nav.left-side {
                 float: left;
-                width: 30%;
+                width: 25%;
+                margin-left: 50px;
 
                 a {
-                    font-size: 11px;
                     border-bottom: 1px solid black;
-                    margin: 0 0 5px 0;
-                    padding: 15px 0 15px 20px;
                     display: block;
                     color: black;
-                    text-decoration: none;
+                    font-size: 11px;
                     text-transform: uppercase;
+                    text-decoration: none;
+                    /*margin: 0 0 10px 0;*/
+                    padding: 15px 0 15px 20px;
 
                     &:hover {
                         background-color: saddlebrown;
                         color: white;
                     }
                 }
-
             }
 
             article {
-                width: 60%;
+                width: 65%;
                 float: right;
                 background-color: white;
-                padding: 5px;
+                padding: 10px;
 
                 h2 {
                     color: red;
-                    text-transform: uppercase;
                     border-bottom: 2px dotted red;
-                    font-weight: bold;
+                    text-transform: uppercase;
+                    font-weight: normal;
                 }
 
                 p {
@@ -95,33 +108,53 @@ div#container {
                         font-weight: bold;
                         font-size: 110%;
                     }
+                }
 
-                    &.learn-more {
-                        text-align: right;
+                > img {
+                    width: 100%;
+                }
 
-                        a {
-                            color: red;
-                            text-decoration: none;
+                nav {
+                    text-align: right;
+                    font-size: 14px;
+                    font-weight: normal;
+                    text-transform: uppercase;
 
-                            &:hover {
-                                text-decoration: underline;
-                            }
+                    a {
+                        color: red;
+                        text-decoration: none;
+
+                        &:hover {
+                            text-decoration: underline;
                         }
                     }
                 }
             }
+
             div.clear-float {
                 clear: both;
+                margin-left: 50px;
+            }
+
+            nav.login {
+                position: absolute;
+                bottom: 20px;
+                left: 20px;
+                margin: 0 0 70px 30px;
+
+                img {
+                    display: block;
+                    margin: 10px 0;
+                }
             }
         }
-
     }
 
     footer {
         background-color: darkolivegreen;
         color: white;
-        font-size: 9px;
+        font-size: 10px;
         text-align: center;
-        padding: 10px;
+        padding: 8px;
     }
 }
